# trinityvlm

./: .gitignore  README.md  main.py  pyproject.toml
configs/: bench_mix_seq4096_mb2_muon_baseline.toml  bench_mix_seq4096_mb2_muon_nockpt.toml  bridge_fsdp2.toml  bridge_full_example.toml  bridge_full_train_20260413.toml  bridge_full_train_20260413_seq2048.toml  bridge_full_train_20260413_seq2048_ckpt.toml  bridge_full_train_20260413_seq2048_ckpt_compile.toml  bridge_mix_pixmo_nemotron.toml  bridge_mix_pixmo_nemotron_local_20260414.toml  bridge_mix_pixmo_nemotron_local_20260415_ddp.toml  bridge_mix_pixmo_nemotron_local_20260415_ddp_cce.toml  loss_sanity_fsdp2.toml  profile_fsdp2.toml  profile_fsdp2_grouped_quick.toml  profile_fsdp2_nockpt.toml  profile_fsdp2_nockpt_reshard.toml  profile_mix_local_20260415_baseline.toml  profile_mix_local_20260415_cce.toml  profile_mix_local_20260415_compile.toml  profile_mix_local_20260415_compile_clean.toml  profile_mix_local_20260415_ddp.toml  profile_mix_local_20260415_nockpt.toml  smoke_fsdp2.toml  smoke_fsdp2_quick.toml  smoke_mix_pixmo_nemotron_fast.toml  smoke_mix_pixmo_nemotron_nocompile.toml  smoke_seq2048_pack2.toml  smoke_single_gpu.toml
scripts/: benchmark_fixed_batch.py  export_final_model.py  export_trinityvlm.py  gradio_checkpoint_app.py  prefetch_training_data.py  prepare_nemotron_chat_jsonl.py  profile_torch_step.py  profile_torch_step_ddp.py  train_ddp.py  train_fsdp2.py
src/trinity_vlm/: __init__.py  chat_content.py  chat_template.jinja  configuration_trinity_vlm.py  data.py  graft.py  image_tokens.py  train.py  (+5 more)
