[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-vlm"
version = "0.1.0"
description = "Trinity plus Moondream vision graft experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cut-cross-entropy",
    "datasets>=4.0.0",
    "gradio>=5.25.0",
    "huggingface-hub>=1.0.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "safetensors>=0.5.0",
    "torch>=2.5.0",
    "transformers>=4.57.0",
    "wandb>=0.19.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
cut-cross-entropy = { git = "https://github.com/apple/ml-cross-entropy.git" }
